--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-<header>
+<header class="header-container">
     <nav class="nav-container">
         <div>
-            <h2>G3 Architects</h2>
+            <h2 class="logo">G3 Architects</h2>
         </div>
         <div class="header-menu">
                 <li><a href="">Home</a></li>
@@ -22,7 +22,18 @@
                 <li><a href="">Contact Us</a></li>
                 <li><a href="">Login</a></li>
         </div>
+
     </nav>
+    <div class="banner">
+        <div class="banner-content">
+            <h1 class="banner-title">Brand New 
+                Group of Architects 
+                </h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+        </div>
+        <img src="./images/banner.png" alt="">
+    </div>
 </header>
     
 </body>
