sponspors section complete

--- a/index.html
+++ b/index.html
@@ -57,6 +57,55 @@
             <button class="btn-primary">Explore More</button>
         </div>
     </section>
+
+    <!-- features -->
+    <section>
+
+    </section>
+
+    <!-- fact section -->
+
+    <section class="fact-section">
+        <h3 class="logo" id="fact-title">Some Facts</h3>
+        <p class="banner-description" id="fact-description">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+
+        <div class="fact-box-container">
+            <div class="fact-box">
+               <img src="./images/icons/ribon.png" alt="">
+                    <h3 class="fact-stats">54</h3>
+                    <p class="fact-name">Awards Winnings</p>
+            </div>
+            <div class="fact-box">
+               <img src="./images/icons/projects.png" alt="">
+                <h3 class="fact-stats">1458</h3>
+                <p class="fact-name">Project Finished</p>
+            </div>
+            <div class="fact-box">
+               <img src="./images/icons/customers.png" alt="">
+                <h3 class="fact-stats">590</h3>
+                <p class="fact-name">Clients Worked</p>
+            </div>
+                <div class="fact-box">
+                <img src="./images/icons/email.png" alt="">
+                <h3 class="fact-stats">22578</h3>
+                <p class="fact-name">Email Send</p>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- sponsor section -->
+    <section class="sponspors-section">
+        <h1 class="logo" id="sponspors-title">Our Sponspors</h1>
+        <p class="banner-description" id="sponspors-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div class="sponspors">
+            <img src="./images/sponsors/spotify.png" alt="">
+            <img src="./images/sponsors/amazon.png" alt="">
+            <img src="./images/sponsors/google.png" alt="">
+            <img src="./images/sponsors/telerama.png" alt="">
+            <img src="./images/sponsors/figma.png" alt="">
+        </div>
+    </section>
 </main>
     
 </body>
