--- a/index.html
+++ b/index.html
@@ -59,8 +59,34 @@
     </section>
 
     <!-- features -->
-    <section>
-
+    <section class="features">
+        <div class="features-content">
+            <h3 class="features-title">Features you will <br> love & enjoy</h3>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <div class="card">
+                <h3>Dexktop & Mobile Version</h3>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="card">
+                <h3>Dexktop & Mobile Version</h3>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="card">
+                <h3>Dexktop & Mobile Version</h3>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="card">
+                <h3>Dexktop & Mobile Version</h3>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+        </div>
+        <div class="features-img">
+            <img src="./images/architect.png" alt="">
+            <div class="ten-years-badge">
+                <h1>10+ years</h1>
+                <p>Experience</p>
+            </div>
+        </div>
     </section>
 
     <!-- fact section -->
@@ -93,6 +119,7 @@
         </div>
 
     </section>
+    
 
     <!-- sponsor section -->
     <section class="sponspors-section">
@@ -107,6 +134,9 @@
         </div>
     </section>
 </main>
-    
+    <!-- footer -->
+    <footer>
+        <p style="color: #424242; font-size: 20px; text-align: center;">All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 </html>
